--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Antonio Trento, theme Jeky New Age, the start Bootstrap themplate build for jekyll
-email:
-description: A jekyll template for landing pages, portfolio and blogging
+title: Name
+email: 
+description: An early-learning app that engages your child by adapting to their learning styles
 
 baseurl: "" # the subpath of your site, e.g. /blog/ (If you use organization leave empty)
 url: "http://pwolfe854.com" # the base hostname & protocol for your site
@@ -18,13 +18,9 @@ disqus_account: jeky-new-age
 # Social networks usernames (many more available: flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.) see all icon at fontawesome.io
 social:
   - title: twitter
-    url: https://twitter.com/lantoniotrento
+    url: https://twitter.com/
   - title: facebook
-    url: https://facebook.com/lantoniotrento
-  - title: google-plus
-    url: https://plus.google.com/+AntoniotrentoIt
-  #- title: github
-  #  url: http://github.com/jekyll
+    url: https://facebook.com/
 
 # Build settings
 markdown: kramdown
@@ -32,9 +28,7 @@ highlighter: rouge
 permalink: pretty
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
-
 gems: [jekyll-paginate, jekyll-feed]
-# Build settings
 include: ['_pages']
 
 # Specify the port jekyll uses to serve locally
