--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ baseurl: "" # the subpath of your site, e.g. /blog/ (If you use organization lea
 url: "http://pwolfe854.com" # the base hostname & protocol for your site
 
 #Google Ad Words Data from scripts code (using Google responsive options) and ad client
-data-ad-slot: 2973388149
-data-ad-client: ca-pub-9204963049240271
-google_ad_client: ca-pub-9204963049240271
+# data-ad-slot: 2973388149
+# data-ad-client: ca-pub-9204963049240271
+# google_ad_client: ca-pub-9204963049240271
 
 google_analytics: "UA-86331249-1"
 addthis_id: ra-5644da281510c62f
