twitter and facebook links updated

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: "http://pwolfe854.com" # the base hostname & protocol for your site
 # Social networks usernames (many more available: flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.) see all icon at fontawesome.io
 social:
   - title: twitter
-    url: https://twitter.com/
+    url: https://twitter.com/Adptvlearn
   - title: facebook
     url: https://www.facebook.com/projectifytech/
 
