changed color scheme and name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: AdaptiveLearning
+title: ConvexMind
 email: 
 description: An early-learning app that engages your child by adapting to their learning styles
 
