--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social:
   - title: twitter
     url: https://twitter.com/ConvexMind
   - title: facebook
-    url: https://www.facebook.com/projectifytech/
+    url: https://www.facebook.com/ConvexMinds/
 
 # Build settings
 markdown: kramdown
