--- a/pwolfe8-site/package.json
+++ b/pwolfe8-site/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "immer": ">=9.0.6",
+    "nth-check": ">=2.0.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
